objects/AligntechCustom__c.object
<CustomObject>
    <fields>
        <fullName>Ginger__c</fullName>
        <label>Ginger</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Ginger1</fullName>
                </value>
                <value>
                    <fullName>Ginger2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Potato__c</fullName>
        <label>Potato</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>potato1</fullName>
                </value>
                <value>
                    <fullName>potato2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tender__c</fullName>
        <label>Tender</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>tender1</fullName>
                </value>
                <value>
                    <fullName>tender2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tomato__c</fullName>
        <label>Tomato</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Tomato1</fullName>
                </value>
                <value>
                    <fullName>Tomato2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>onion__c</fullName>
        <label>onion</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>onion 1</fullName>
                </value>
                <value>
                    <fullName>onion 2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>AligntechCustom</label>
    <nameField>
        <label>AligntechCustom Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AligntechCustom</pluralLabel>
    <recordTypes>
        <fullName>NewFarm</fullName>
        <active>true</active>
        <label>NewFarm</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>